--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mockjs": "^1.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.9",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
