--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "report": "node build/index.js --preview --report",
+    "preview": "node build/index.js --preview",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -25,12 +27,16 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "chalk": "^2.4.2",
     "compression-webpack-plugin": "^5.0.2",
+    "connect": "^3.7.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "mockjs": "^1.1.0",
+    "runjs": "^4.4.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "serve-static": "^1.14.1",
     "svg-sprite-loader": "^6.0.9",
     "vue-template-compiler": "^2.6.11"
   },
